# understanding-systems

./: .gitignore  README.md  THEME-UNIFICATION.md  about.html  common-styles.css  compose.yml  generate-index.js  index-2.html  index.html  nginx.conf
model/: MODEL-STATE.md  package-lock.json  test-graph.mjs
model/adapters/: blog-data-loader.js  economic-model-adapter.js  loader.js
model/data/: README.md  build-cache.mjs  node-positions.json
model/definitions/: economic-model.yaml  toy-model.yaml
model/kernel/: edge.js  graph.js  index.js  model-fit.js  signal.js
model/ui/: circuit-view.js  economic-model.html  index.html
posts/2025-12-15-recession-unemployment/: index.html  meta.json  test.js  update-data.sh
posts/2025-12-15-recession-unemployment/scripts/: Cargo.toml
posts/2025-12-15-recession-unemployment/scripts/src/fetchers/: fetch_gdp.rs  fetch_unemployment.rs
posts/2025-12-15-recession-unemployment/scripts/src/transformations/: gdp_growth.rs  gdp_log_diff.rs  unemployment_gdp_analysis.rs
posts/2025-12-20-unemployment-trend/: index.html  meta.json  test.js  update-data.sh
posts/2025-12-20-unemployment-trend/scripts/: Cargo.toml
posts/2025-12-20-unemployment-trend/scripts/src/fetchers/: fetch_unemployment.rs  recession_indicator.rs
posts/2025-12-20-unemployment-trend/scripts/src/transformations/: unemployment_trend_analysis.rs
posts/2025-12-30-bond-markets-yield-curve/: index.html  meta.json  test.js
posts/2025-12-30-currency-factors/: index.html  meta.json  test.js
posts/2025-12-30-financial-system-evolution/: index.html  meta.json  test.js
(+68 files in other folders)
