[package]
name = "recession-unemployment"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ureq = "3.1"
scirs2 = "0.1.0-rc.3"
linfa = "0.7"
linfa-linear = "0.7"
ndarray = "0.15"

# Fetchers
[[bin]]
name = "fetch_unemployment"
path = "src/fetchers/fetch_unemployment.rs"

[[bin]]
name = "fetch_gdp"
path = "src/fetchers/fetch_gdp.rs"

[[bin]]
name = "recession_indicator"
path = "src/fetchers/recession_indicator.rs"

# Transformations
[[bin]]
name = "gdp_growth"
path = "src/transformations/gdp_growth.rs"

[[bin]]
name = "gdp_log_diff"
path = "src/transformations/gdp_log_diff.rs"

[[bin]]
name = "unemployment_gdp_analysis"
path = "src/transformations/unemployment_gdp_analysis.rs"
